cluster1/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tls-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: GRPC
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: example-tls
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: samples-api
spec:
  gateways:
  - tls-gateway
  hosts:
    - "*"
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: server1
        port:
          number: 8080
