cluster1/server1 copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server1
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx1.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server1
            port:
              number: 8080
  tls:
  - hosts:
      - nginx1.example.com
    secretName: example-tls
